Survey Form project updated

--- a/Build Survey Form/index.html
+++ b/Build Survey Form/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylsheet" href="styles.css">
+    <link rel="stylsheet" href="/Build Survey Form/styles.css">
     <title>Survey Form</title>
 </head>
 
@@ -18,7 +18,7 @@
                     required></label>
             <label for="email" id="email-label">Email: <input type="email" id="email" placeholder="Enter your email"
                     required></label>
-            <label for="age" id="number-label">Age: <input type="number" id="number" min=13 max=100
+            <label for="number" id="number-label">Age: <input type="number" id="number" min=13 max=100
                     placeholder="Enter your age" required></label>
         </fieldset>
 
@@ -55,9 +55,9 @@
             <legend>Areas to improve?</legend>
             <label><input type="checkbox" id="seating" class="inline" value="seating">Seating</label>
             <label><input type="checkbox" id="parking" class="inline" value="parking">Parking</label>
-            <label><input type="checkbox" id="food and beverages" class="inline" value="food and beverages">Food and
+            <label><input type="checkbox" id="food_and_beverages" class="inline" value="food and beverages">Food and
                 beverages</label>
-            <label><input type="checkbox" id="ticket fair" class="inline" value="ticket fair">Ticket fair</label>
+            <label><input type="checkbox" id="ticket_fair" class="inline" value="ticket fair">Ticket fair</label>
         </fieldset>
 
         <fieldset>
@@ -69,4 +69,4 @@
         <input id="submit" type="submit" value="submit">
     </form>
 </body>
-<html>
+</html>
