--- a/Survey_Form/index.html
+++ b/Survey_Form/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylsheet" type="text/css" href="/Survey_Form/styles.css">
+    <link rel="stylesheet" type="text/css" href="/Survey_Form/styles.css">
     <title>Survey Form</title>
 </head>
 
