--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 id="title">CSK IPL Home Match Experience</h1>
-    <p id="description">Thank you for taking the time to help us imporve the staduim experience.</p>
+    <p id="description">Thank you for taking the time to help us improve the stadium experience.</p>
     <form id="survey-form" method="post">
 
         <fieldset>
@@ -41,7 +41,7 @@
                     <option value="delhi capitals">Delhi Capitals</option>
                     <option value="gujarat titans">Gujarat Titans</option>
                     <option value="kolkata knight riders">Kolkata Knight Riders</option>
-                    <option value="lcknow super giants">Lucknow Super Giants</option>
+                    <option value="lucknow super giants">Lucknow Super Giants</option>
                     <option value="mumbai indians">Mumbai Indians</option>
                     <option value="punjab kings">Punjab Kings</option>
                     <option value="rajasthan royals">Rajasthan Royals</option>
